logs/novastella.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nova'...
Compiling './lib/python3.5/site-packages/nova/filters.py'...
***   File "./lib/python3.5/site-packages/nova/filters.py", line 63
    order_range = list(range(order+1))
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nova/load_eqdsk.py'...
***   File "./lib/python3.5/site-packages/nova/load_eqdsk.py", line 460
    '''
      ^
SyntaxError: EOF while scanning triple-quoted string literal

Compiling './lib/python3.5/site-packages/nova/moveXcoils_old.py'...
*** Sorry: IndentationError: unexpected indent (moveXcoils_old.py, line 94)
Compiling './lib/python3.5/site-packages/nova/old_plasma_parameters.py'...
*** Sorry: IndentationError: unexpected indent (old_plasma_parameters.py, line 1)
Compiling './lib/python3.5/site-packages/nova/temp_Bfeild_b.py'...
*** Sorry: IndentationError: unexpected indent (temp_Bfeild_b.py, line 2)
Compiling './lib/python3.5/site-packages/nova/tmp_plasma_coils.py'...
*** Sorry: IndentationError: unexpected indent (tmp_plasma_coils.py, line 1)
Listing './lib/python3.5/site-packages/novastella-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
